Started adding localization to the entry questions, trying to fix ios deploy bug

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,19 +1,28 @@
 {
   "@@locale": "de",
+  
   "languagesSelectLanguage": "Sprache auswählen",
   "languagesChoosePreferredLanguage": "Wählen Sie Ihre bevorzugte Sprache",
   "languagesLanguageChangedTo": "Sprache geändert zu {language}",
+  "@languagesLanguageChangedTo": {
+    "placeholders": {
+      "language": {
+        "type": "String"
+      }
+    }
+  },
   "languagesSelected": "Ausgewählt",
   "languagesRomanian": "Rumänisch",
-  "languagesFrench": "Französisch",
+  "languagesFrench": "Französisch", 
   "languagesGerman": "Deutsch",
   "languagesItalian": "Italienisch",
   "languagesSpanish": "Spanisch",
   "languagesDutch": "Niederländisch",
   "languagesEnglish": "Englisch",
+  
   "countryRomania": "Rumänien",
   "countryMoldova": "Moldau",
-  "countryFrance": "Frankreich", 
+  "countryFrance": "Frankreich",
   "countryBelgium": "Belgien",
   "countryGermany": "Deutschland",
   "countrySwitzerland": "Schweiz",
@@ -21,10 +30,164 @@
   "countrySpain": "Spanien",
   "countryNetherlands": "Niederlande",
   "countryUnitedKingdom": "Vereinigtes Königreich",
+
+  "questionsNext": "Nächste",
+  "questionsPrevious": "Vorherige",
+  "questionsFinish": "Fertigstellen",
+  
   "entryScreenWelcome": "Willkommen",
   "entryScreenYourName": "Ihr Name",
   "entryScreenEnterFullName": "Geben Sie Ihren vollständigen Namen ein",
   "entryScreenIAgreeToThe": "Ich stimme der ",
   "entryScreenGdprPrivacyPolicy": "DSGVO-Datenschutzrichtlinie",
-  "entryScreenContinue": "Weiter"
+  "entryScreenContinue": "Weiter",
+  
+  "questionStudyLevel": "Was ist Ihr aktuelles Studienniveau?",
+  "questionStillStudent": "Sind Sie noch Student?",
+  "questionWhatYear": "In welchem Jahr sind Sie?",
+  "questionWhenFinish": "Wann werden Sie Ihr Studium beenden?",
+  "questionUniversityType": "Welche Art von Universität besuchen/besuchten Sie?",
+  "questionStudyField": "Was ist Ihr Studienfach?",
+  "questionEngineeringType": "Welche Art von Ingenieurwesen?",
+  "questionItArea": "Welcher Bereich IT und Datenwissenschaft?",
+  "questionOtherSpecializations": "Haben Sie andere Spezialisierungen/Nebenfächer?",
+  "questionPriorExperience": "Haben Sie Vorerfahrung in diesen Bereichen?",
+  "questionOtherFields": "In welchen anderen Bereichen haben Sie zuvor gearbeitet?",
+  "questionSoftSkills": "Welche Soft Skills beherrschen Sie?",
+  "questionHardSkills": "Welche Hard Skills beherrschen Sie?",
+  "questionLanguagesComfortable": "In welchen Sprachen können Sie das Praktikum bequem absolvieren?",
+  "questionCountriesSearch": "In welchen Ländern suchen Sie ein Praktikum?",
+  "questionAvailability": "Wie ist Ihre Verfügbarkeit?",
+  "questionInternshipLength": "Wie lange soll das Praktikum dauern?",
+  "questionRequireVisa": "Benötigen Sie ein VISUM zum Arbeiten?",
+  "questionConsiderTraineeships": "Würden Sie auch Ausbildungen in Betracht ziehen?",
+  
+  "optionHighschool": "Gymnasium",
+  "optionBachelor": "Bachelor",
+  "optionMaster": "Master", 
+  "optionPhd": "Promotion",
+  "optionYes": "Ja",
+  "optionNo": "Nein",
+  "optionMaybe": "Vielleicht",
+  "optionFirstYear": "1. Jahr",
+  "optionSecondYear": "2. Jahr", 
+  "optionThirdYear": "3. Jahr",
+  "optionFourthYear": "4. Jahr",
+  "optionResearch": "Forschung",
+  "optionApplied": "Angewandt",
+  "optionEngineering": "Ingenieurwesen",
+  "optionItDataScience": "IT und Datenwissenschaft",
+  "optionMarketingCommunication": "Marketing und Kommunikation",
+  "optionFinanceEconomics": "Finanzen und Wirtschaft",
+  "optionPoliticalScience": "Politikwissenschaft und öffentliche Verwaltung",
+  "optionSalesBusiness": "Vertrieb und Unternehmensführung",
+  "optionArtsCulture": "Kunst und Kultur",
+  "optionBiologyChemistry": "Biologie, Chemie und Lebenswissenschaften",
+  "optionNone": "Keine",
+  "optionMechanical": "Maschinenbau",
+  "optionElectrical": "Elektrotechnik",
+  "optionAerospace": "Luft- und Raumfahrt",
+  "optionCivil": "Bauingenieurwesen",
+  "optionChemical": "Chemieingenieurwesen",
+  "optionSoftwareDevelopment": "Softwareentwicklung und Debugging",
+  "optionFullStackDevelopment": "Full-Stack-Entwicklung",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps und CI/CD",
+  "optionItSupport": "IT-Support und Systemadministration",
+  "optionProductManagement": "Produktmanagement",
+  "optionMachineLearning": "Machine Learning und KI",
+  "optionDataAnalysis": "Datenanalyse",
+  "optionYesInternship": "Ja, Praktikum",
+  "optionYesPartTime": "Ja, Teilzeitjob",
+  "optionYesPersonalProjects": "Ja, persönliche Projekte",
+  "optionAnytime": "Jederzeit",
+  "optionSummer": "Sommer",
+  "optionAutumn": "Herbst",
+  "optionWinter": "Winter",
+  "optionSpring": "Frühling",
+  "optionOneToThreeMonths": "1-3 Monate",
+  "optionThreeToSixMonths": "3-6 Monate",
+  "optionSixToTwelveMonths": "6-12 Monate",
+  "optionMoreThanTwelveMonths": "Mehr als 12 Monate",
+  "optionYesEuUk": "Ja, für EU/EWR und UK",
+  "optionYesEu": "Ja, für EU/EWR",
+  "optionYesUk": "Ja, für UK",
+  
+  "languageAlbanian": "Albanisch",
+  "languageBosnian": "Bosnisch",
+  "languageBulgarian": "Bulgarisch",
+  "languageCatalan": "Katalanisch",
+  "languageCroatian": "Kroatisch",
+  "languageCzech": "Tschechisch",
+  "languageDanish": "Dänisch",
+  "languageDutch": "Niederländisch",
+  "languageEnglish": "Englisch",
+  "languageEstonian": "Estnisch",
+  "languageFinnish": "Finnisch",
+  "languageFrench": "Französisch",
+  "languageGerman": "Deutsch",
+  "languageGreek": "Griechisch",
+  "languageHungarian": "Ungarisch",
+  "languageIcelandic": "Isländisch",
+  "languageIrish": "Irisch",
+  "languageItalian": "Italienisch",
+  "languageLatvian": "Lettisch",
+  "languageLithuanian": "Litauisch",
+  "languageLuxembourgish": "Luxemburgisch",
+  "languageMacedonian": "Mazedonisch",
+  "languageMaltese": "Maltesisch",
+  "languageMontenegrin": "Montenegrinisch",
+  "languageNorwegian": "Norwegisch",
+  "languagePolish": "Polnisch",
+  "languagePortuguese": "Portugiesisch",
+  "languageRomanian": "Rumänisch",
+  "languageRussian": "Russisch",
+  "languageSerbian": "Serbisch",
+  "languageSlovak": "Slowakisch",
+  "languageSlovenian": "Slowenisch",
+  "languageSpanish": "Spanisch",
+  "languageSwedish": "Schwedisch",
+  "languageTurkish": "Türkisch",
+  "languageUkrainian": "Ukrainisch",
+  
+  "countryAny": "Beliebig",
+  "countryAlbania": "Albanien",
+  "countryAndorra": "Andorra",
+  "countryAustria": "Österreich",
+  "countryBosniaHerzegovina": "Bosnien und Herzegowina",
+  "countryBulgaria": "Bulgarien",
+  "countryCroatia": "Kroatien",
+  "countryCyprus": "Zypern",
+  "countryCzechRepublic": "Tschechische Republik",
+  "countryDenmark": "Dänemark",
+  "countryEstonia": "Estland",
+  "countryFinland": "Finnland",
+  "countryGreece": "Griechenland",
+  "countryHungary": "Ungarn",
+  "countryIceland": "Island",
+  "countryIreland": "Irland",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Lettland",
+  "countryLithuania": "Litauen",
+  "countryLuxembourg": "Luxemburg",
+  "countryMalta": "Malta",
+  "countryMonaco": "Monaco",
+  "countryMontenegro": "Montenegro",
+  "countryNorthMacedonia": "Nordmazedonien",
+  "countryNorway": "Norwegen",
+  "countryPoland": "Polen",
+  "countryPortugal": "Portugal",
+  "countrySanMarino": "San Marino",
+  "countrySerbia": "Serbien",
+  "countrySlovakia": "Slowakei",
+  "countrySlovenia": "Slowenien",
+  "countrySweden": "Schweden",
+  "countryUkraine": "Ukraine",
+  "countryVaticanCity": "Vatikanstadt",
+  
+  "hintSelectOne": "Eine Option auswählen",
+  "hintSelectMultiple": "Alle zutreffenden auswählen",
+  "hintSearchAndSelect": "Suchen und auswählen",
+  "hintTypeAnswer": "Antwort hier eingeben",
+  "hintOtherSpecify": "Andere, spezifizieren"
 }
