--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "en",
+  
   "languagesSelectLanguage": "Select Language",
   "languagesChoosePreferredLanguage": "Choose your preferred language",
   "languagesLanguageChangedTo": "Language changed to {language}",
@@ -18,20 +19,174 @@
   "languagesSpanish": "Spanish",
   "languagesDutch": "Dutch",
   "languagesEnglish": "English",
-  "countryRomania": "Romania",
-  "countryMoldova": "Moldova", 
-  "countryFrance": "France",
-  "countryBelgium": "Belgium",
-  "countryGermany": "Germany",
-  "countrySwitzerland": "Switzerland",
-  "countryItaly": "Italy",
-  "countrySpain": "Spain",
-  "countryNetherlands": "Netherlands",
-  "countryUnitedKingdom": "United Kingdom",
+
   "entryScreenWelcome": "Welcome",
   "entryScreenYourName": "Your Name",
   "entryScreenEnterFullName": "Enter your full name",
   "entryScreenIAgreeToThe": "I agree to the ",
   "entryScreenGdprPrivacyPolicy": "GDPR Privacy Policy",
-  "entryScreenContinue": "Continue"
+  "entryScreenContinue": "Continue",
+
+  "questionsNext": "Next",
+  "questionsPrevious": "Previous",
+  "questionsFinish": "Finish",
+  
+  "questionStudyLevel": "What is your current level of study?",
+  "questionStillStudent": "Are you still a student?",
+  "questionWhatYear": "What year are you in?",
+  "questionWhenFinish": "When will you be done with your studies?",
+  "questionUniversityType": "What kind of university do/did you attend?",
+  "questionStudyField": "What is the field of your study?",
+  "questionEngineeringType": "What type of engineering?",
+  "questionItArea": "What area of IT & Data Science?",
+  "questionOtherSpecializations": "Do you have other specializations/minor?",
+  "questionPriorExperience": "Do you have any prior experience in these fields?",
+  "questionOtherFields": "What other fields have you worked in before?",
+  "questionSoftSkills": "What soft skills do you master?",
+  "questionHardSkills": "What hard skills do you master?",
+  "questionLanguagesComfortable": "What languages are you comfortable doing the internship in?",
+  "questionCountriesSearch": "What countries are you searching an internship in?",
+  "questionAvailability": "What is your availability?",
+  "questionInternshipLength": "How long should the internship be?",
+  "questionRequireVisa": "Do you require VISA to work?",
+  "questionConsiderTraineeships": "Would you also consider traineeships?",
+  
+  "optionHighschool": "Highschool",
+  "optionBachelor": "Bachelor",
+  "optionMaster": "Master", 
+  "optionPhd": "PhD",
+  "optionYes": "Yes",
+  "optionNo": "No",
+  "optionMaybe": "Maybe",
+  "optionFirstYear": "1st Year",
+  "optionSecondYear": "2nd Year", 
+  "optionThirdYear": "3rd Year",
+  "optionFourthYear": "4th Year",
+  "optionResearch": "Research",
+  "optionApplied": "Applied",
+  "optionEngineering": "Engineering",
+  "optionItDataScience": "IT & Data Science",
+  "optionMarketingCommunication": "Marketing & Communication",
+  "optionFinanceEconomics": "Finance & Economics",
+  "optionPoliticalScience": "Political Science & Public Administration",
+  "optionSalesBusiness": "Sales & Business Administration",
+  "optionArtsCulture": "Arts & Culture",
+  "optionBiologyChemistry": "Biology, Chemistry, & Life Sciences",
+  "optionNone": "None",
+  "optionMechanical": "Mechanical",
+  "optionElectrical": "Electrical",
+  "optionAerospace": "Aerospace",
+  "optionCivil": "Civil",
+  "optionChemical": "Chemical",
+  "optionSoftwareDevelopment": "Software Development & Debugging",
+  "optionFullStackDevelopment": "Full-stack Development",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps & CI/CD",
+  "optionItSupport": "IT Support & System Administration",
+  "optionProductManagement": "Product Management",
+  "optionMachineLearning": "Machine Learning & AI",
+  "optionDataAnalysis": "Data Analysis",
+  "optionYesInternship": "Yes, internship",
+  "optionYesPartTime": "Yes, part-time job",
+  "optionYesPersonalProjects": "Yes, personal projects",
+  "optionAnytime": "Anytime",
+  "optionSummer": "Summer",
+  "optionAutumn": "Autumn",
+  "optionWinter": "Winter",
+  "optionSpring": "Spring",
+  "optionOneToThreeMonths": "1-3 months",
+  "optionThreeToSixMonths": "3-6 months",
+  "optionSixToTwelveMonths": "6-12 months",
+  "optionMoreThanTwelveMonths": "More than 12 months",
+  "optionYesEuUk": "Yes, for EU/EEA and UK",
+  "optionYesEu": "Yes, for EU/EEA",
+  "optionYesUk": "Yes, for UK",
+  
+  "languageAlbanian": "Albanian",
+  "languageBosnian": "Bosnian",
+  "languageBulgarian": "Bulgarian",
+  "languageCatalan": "Catalan",
+  "languageCroatian": "Croatian",
+  "languageCzech": "Czech",
+  "languageDanish": "Danish",
+  "languageDutch": "Dutch",
+  "languageEnglish": "English",
+  "languageEstonian": "Estonian",
+  "languageFinnish": "Finnish",
+  "languageFrench": "French",
+  "languageGerman": "German",
+  "languageGreek": "Greek",
+  "languageHungarian": "Hungarian",
+  "languageIcelandic": "Icelandic",
+  "languageIrish": "Irish",
+  "languageItalian": "Italian",
+  "languageLatvian": "Latvian",
+  "languageLithuanian": "Lithuanian",
+  "languageLuxembourgish": "Luxembourgish",
+  "languageMacedonian": "Macedonian",
+  "languageMaltese": "Maltese",
+  "languageMontenegrin": "Montenegrin",
+  "languageNorwegian": "Norwegian",
+  "languagePolish": "Polish",
+  "languagePortuguese": "Portuguese",
+  "languageRomanian": "Romanian",
+  "languageRussian": "Russian",
+  "languageSerbian": "Serbian",
+  "languageSlovak": "Slovak",
+  "languageSlovenian": "Slovenian",
+  "languageSpanish": "Spanish",
+  "languageSwedish": "Swedish",
+  "languageTurkish": "Turkish",
+  "languageUkrainian": "Ukrainian",
+  
+  "countryAny": "Any",
+  "countryAlbania": "Albania",
+  "countryAndorra": "Andorra",
+  "countryAustria": "Austria",
+  "countryBelgium": "Belgium",
+  "countryBosniaHerzegovina": "Bosnia and Herzegovina",
+  "countryBulgaria": "Bulgaria",
+  "countryCroatia": "Croatia",
+  "countryCyprus": "Cyprus",
+  "countryCzechRepublic": "Czech Republic",
+  "countryDenmark": "Denmark",
+  "countryEstonia": "Estonia",
+  "countryFinland": "Finland",
+  "countryFrance": "France",
+  "countryGermany": "Germany",
+  "countryGreece": "Greece",
+  "countryHungary": "Hungary",
+  "countryIceland": "Iceland",
+  "countryIreland": "Ireland",
+  "countryItaly": "Italy",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Latvia",
+  "countryLithuania": "Lithuania",
+  "countryLuxembourg": "Luxembourg",
+  "countryMalta": "Malta",
+  "countryMoldova": "Moldova",
+  "countryMonaco": "Monaco",
+  "countryMontenegro": "Montenegro",
+  "countryNetherlands": "Netherlands",
+  "countryNorthMacedonia": "North Macedonia",
+  "countryNorway": "Norway",
+  "countryPoland": "Poland",
+  "countryPortugal": "Portugal",
+  "countryRomania": "Romania",
+  "countrySanMarino": "San Marino",
+  "countrySerbia": "Serbia",
+  "countrySlovakia": "Slovakia",
+  "countrySlovenia": "Slovenia",
+  "countrySpain": "Spain",
+  "countrySweden": "Sweden",
+  "countrySwitzerland": "Switzerland",
+  "countryUkraine": "Ukraine",
+  "countryUnitedKingdom": "United Kingdom",
+  "countryVaticanCity": "Vatican City",
+  
+  "hintSelectOne": "Select one option",
+  "hintSelectMultiple": "Select all that apply",
+  "hintSearchAndSelect": "Search and select",
+  "hintTypeAnswer": "Type your answer here",
+  "hintOtherSpecify": "Other, specify"
 }
