--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,30 +1,192 @@
 {
   "@@locale": "es",
-  "languagesSelectLanguage": "Seleccionar idioma",
+  
+  "languagesSelectLanguage": "Seleccionar Idioma",
   "languagesChoosePreferredLanguage": "Elige tu idioma preferido",
   "languagesLanguageChangedTo": "Idioma cambiado a {language}",
-  "languagesSelected": "Seleccionada",
+  "@languagesLanguageChangedTo": {
+    "placeholders": {
+      "language": {
+        "type": "String"
+      }
+    }
+  },
+  "languagesSelected": "Seleccionado",
   "languagesRomanian": "Rumano",
-  "languagesFrench": "Francés",
+  "languagesFrench": "Francés", 
   "languagesGerman": "Alemán",
   "languagesItalian": "Italiano",
   "languagesSpanish": "Español",
-  "languagesDutch": "Holandés",
+  "languagesDutch": "Neerlandés",
   "languagesEnglish": "Inglés",
-  "countryRomania": "Rumania",
-  "countryMoldova": "Moldavia",
-  "countryFrance": "Francia", 
-  "countryBelgium": "Bélgica",
-  "countryGermany": "Alemania",
-  "countrySwitzerland": "Suiza",
-  "countryItaly": "Italia",
-  "countrySpain": "España",
-  "countryNetherlands": "Países Bajos",
-  "countryUnitedKingdom": "Reino Unido",
+  
   "entryScreenWelcome": "Bienvenido",
   "entryScreenYourName": "Tu nombre",
-  "entryScreenEnterFullName": "Introduce tu nombre completo",
+  "entryScreenEnterFullName": "Ingresa tu nombre completo",
   "entryScreenIAgreeToThe": "Acepto la ",
-  "entryScreenGdprPrivacyPolicy": "Política de Privacidad RGPD",
-  "entryScreenContinue": "Continuar"
+  "entryScreenGdprPrivacyPolicy": "Política de privacidad RGPD",
+  "entryScreenContinue": "Continuar",
+
+  "questionsNext": "Siguiente",
+  "questionsPrevious": "Anterior",
+  "questionsFinish": "Finalizar",
+  
+  "questionStudyLevel": "¿Cuál es tu nivel actual de estudios?",
+  "questionStillStudent": "¿Sigues siendo estudiante?",
+  "questionWhatYear": "¿En qué año estás?",
+  "questionWhenFinish": "¿Cuándo terminarás tus estudios?",
+  "questionUniversityType": "¿Qué tipo de universidad cursas/cursaste?",
+  "questionStudyField": "¿Cuál es tu campo de estudio?",
+  "questionEngineeringType": "¿Qué tipo de ingeniería?",
+  "questionItArea": "¿Qué área de IT y Ciencia de datos?",
+  "questionOtherSpecializations": "¿Tienes otras especializaciones/menores?",
+  "questionPriorExperience": "¿Tienes experiencia previa en estos campos?",
+  "questionOtherFields": "¿En qué otros campos has trabajado antes?",
+  "questionSoftSkills": "¿Qué habilidades blandas dominas?",
+  "questionHardSkills": "¿Qué habilidades técnicas dominas?",
+  "questionLanguagesComfortable": "¿En qué idiomas te sientes cómodo haciendo las prácticas?",
+  "questionCountriesSearch": "¿En qué países buscas prácticas?",
+  "questionAvailability": "¿Cuál es tu disponibilidad?",
+  "questionInternshipLength": "¿Cuánto deberían durar las prácticas?",
+  "questionRequireVisa": "¿Necesitas VISA para trabajar?",
+  "questionConsiderTraineeships": "¿También considerarías programas de formación?",
+  
+  "optionHighschool": "Bachillerato",
+  "optionBachelor": "Licenciatura",
+  "optionMaster": "Máster", 
+  "optionPhd": "Doctorado",
+  "optionYes": "Sí",
+  "optionNo": "No",
+  "optionMaybe": "Tal vez",
+  "optionFirstYear": "1er año",
+  "optionSecondYear": "2º año", 
+  "optionThirdYear": "3er año",
+  "optionFourthYear": "4º año",
+  "optionResearch": "Investigación",
+  "optionApplied": "Aplicada",
+  "optionEngineering": "Ingeniería",
+  "optionItDataScience": "IT y Ciencia de datos",
+  "optionMarketingCommunication": "Marketing y Comunicación",
+  "optionFinanceEconomics": "Finanzas y Economía",
+  "optionPoliticalScience": "Ciencias políticas y Administración pública",
+  "optionSalesBusiness": "Ventas y Administración de empresas",
+  "optionArtsCulture": "Arte y Cultura",
+  "optionBiologyChemistry": "Biología, Química y Ciencias de la vida",
+  "optionNone": "Ninguno",
+  "optionMechanical": "Mecánica",
+  "optionElectrical": "Eléctrica",
+  "optionAerospace": "Aeroespacial",
+  "optionCivil": "Civil",
+  "optionChemical": "Química",
+  "optionSoftwareDevelopment": "Desarrollo de software y Depuración",
+  "optionFullStackDevelopment": "Desarrollo full-stack",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps y CI/CD",
+  "optionItSupport": "Soporte IT y Administración de sistemas",
+  "optionProductManagement": "Gestión de productos",
+  "optionMachineLearning": "Machine Learning e IA",
+  "optionDataAnalysis": "Análisis de datos",
+  "optionYesInternship": "Sí, prácticas",
+  "optionYesPartTime": "Sí, trabajo a tiempo parcial",
+  "optionYesPersonalProjects": "Sí, proyectos personales",
+  "optionAnytime": "Cualquier momento",
+  "optionSummer": "Verano",
+  "optionAutumn": "Otoño",
+  "optionWinter": "Invierno",
+  "optionSpring": "Primavera",
+  "optionOneToThreeMonths": "1-3 meses",
+  "optionThreeToSixMonths": "3-6 meses",
+  "optionSixToTwelveMonths": "6-12 meses",
+  "optionMoreThanTwelveMonths": "Más de 12 meses",
+  "optionYesEuUk": "Sí, para UE/EEE y Reino Unido",
+  "optionYesEu": "Sí, para UE/EEE",
+  "optionYesUk": "Sí, para Reino Unido",
+  
+  "hintSelectOne": "Selecciona una opción",
+  "hintSelectMultiple": "Selecciona todas las opciones aplicables",
+  "hintSearchAndSelect": "Buscar y seleccionar",
+  "hintTypeAnswer": "Escribe tu respuesta aquí",
+  "hintOtherSpecify": "Otro, especificar",
+  
+  "countryAny": "Cualquiera",
+  "countryAlbania": "Albania",
+  "countryAndorra": "Andorra",
+  "countryAustria": "Austria",
+  "countryBelgium": "Bélgica",
+  "countryBosniaHerzegovina": "Bosnia y Herzegovina",
+  "countryBulgaria": "Bulgaria",
+  "countryCroatia": "Croacia",
+  "countryCyprus": "Chipre",
+  "countryCzechRepublic": "República Checa",
+  "countryDenmark": "Dinamarca",
+  "countryEstonia": "Estonia",
+  "countryFinland": "Finlandia",
+  "countryFrance": "Francia",
+  "countryGermany": "Alemania",
+  "countryGreece": "Grecia",
+  "countryHungary": "Hungría",
+  "countryIceland": "Islandia",
+  "countryIreland": "Irlanda",
+  "countryItaly": "Italia",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Letonia",
+  "countryLithuania": "Lituania",
+  "countryLuxembourg": "Luxemburgo",
+  "countryMalta": "Malta",
+  "countryMoldova": "Moldavia",
+  "countryMonaco": "Mónaco",
+  "countryMontenegro": "Montenegro",
+  "countryNetherlands": "Países Bajos",
+  "countryNorthMacedonia": "Macedonia del Norte",
+  "countryNorway": "Noruega",
+  "countryPoland": "Polonia",
+  "countryPortugal": "Portugal",
+  "countryRomania": "Rumania",
+  "countrySanMarino": "San Marino",
+  "countrySerbia": "Serbia",
+  "countrySlovakia": "Eslovaquia",
+  "countrySlovenia": "Eslovenia",
+  "countrySpain": "España",
+  "countrySweden": "Suecia",
+  "countrySwitzerland": "Suiza",
+  "countryUkraine": "Ucrania",
+  "countryUnitedKingdom": "Reino Unido",
+  "countryVaticanCity": "Ciudad del Vaticano",
+  
+  "languageAlbanian": "Albanés",
+  "languageBosnian": "Bosnio",
+  "languageBulgarian": "Búlgaro",
+  "languageCatalan": "Catalán",
+  "languageCroatian": "Croata",
+  "languageCzech": "Checo",
+  "languageDanish": "Danés",
+  "languageDutch": "Neerlandés",
+  "languageEnglish": "Inglés",
+  "languageEstonian": "Estonio",
+  "languageFinnish": "Finlandés",
+  "languageFrench": "Francés",
+  "languageGerman": "Alemán",
+  "languageGreek": "Griego",
+  "languageHungarian": "Húngaro",
+  "languageIcelandic": "Islandés",
+  "languageIrish": "Irlandés",
+  "languageItalian": "Italiano",
+  "languageLatvian": "Letón",
+  "languageLithuanian": "Lituano",
+  "languageLuxembourgish": "Luxemburgués",
+  "languageMacedonian": "Macedonio",
+  "languageMaltese": "Maltés",
+  "languageMontenegrin": "Montenegrino",
+  "languageNorwegian": "Noruego",
+  "languagePolish": "Polaco",
+  "languagePortuguese": "Portugués",
+  "languageRomanian": "Rumano",
+  "languageRussian": "Ruso",
+  "languageSerbian": "Serbio",
+  "languageSlovak": "Eslovaco",
+  "languageSlovenian": "Esloveno",
+  "languageSpanish": "Español",
+  "languageSwedish": "Sueco",
+  "languageTurkish": "Turco",
+  "languageUkrainian": "Ucraniano"
 }
