--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,19 +1,28 @@
 {
   "@@locale": "fr",
+  
   "languagesSelectLanguage": "Sélectionner la langue",
   "languagesChoosePreferredLanguage": "Choisissez votre langue préférée",
   "languagesLanguageChangedTo": "Langue changée en {language}",
+  "@languagesLanguageChangedTo": {
+    "placeholders": {
+      "language": {
+        "type": "String"
+      }
+    }
+  },
   "languagesSelected": "Sélectionnée",
   "languagesRomanian": "Roumain",
-  "languagesFrench": "Français",
+  "languagesFrench": "Français", 
   "languagesGerman": "Allemand",
   "languagesItalian": "Italien",
   "languagesSpanish": "Espagnol",
   "languagesDutch": "Néerlandais",
   "languagesEnglish": "Anglais",
+  
   "countryRomania": "Roumanie",
   "countryMoldova": "Moldavie",
-  "countryFrance": "France", 
+  "countryFrance": "France",
   "countryBelgium": "Belgique",
   "countryGermany": "Allemagne",
   "countrySwitzerland": "Suisse",
@@ -21,10 +30,164 @@
   "countrySpain": "Espagne",
   "countryNetherlands": "Pays-Bas",
   "countryUnitedKingdom": "Royaume-Uni",
+
   "entryScreenWelcome": "Bienvenue",
   "entryScreenYourName": "Votre nom",
   "entryScreenEnterFullName": "Entrez votre nom complet",
   "entryScreenIAgreeToThe": "J'accepte la ",
-  "entryScreenGdprPrivacyPolicy": "Politique de Confidentialité RGPD",
-  "entryScreenContinue": "Continuer"
+  "entryScreenGdprPrivacyPolicy": "Politique de confidentialité RGPD",
+  "entryScreenContinue": "Continuer",
+
+  "questionsNext": "Suivante",
+  "questionsPrevious": "Précédente", 
+  "questionsFinish": "Terminer",
+  
+  "questionStudyLevel": "Quel est votre niveau d'études actuel ?",
+  "questionStillStudent": "Êtes-vous encore étudiant ?",
+  "questionWhatYear": "En quelle année êtes-vous ?",
+  "questionWhenFinish": "Quand finirez-vous vos études ?",
+  "questionUniversityType": "Quel type d'université fréquentez/avez-vous fréquenté ?",
+  "questionStudyField": "Quel est votre domaine d'études ?",
+  "questionEngineeringType": "Quel type d'ingénierie ?",
+  "questionItArea": "Quel domaine IT et Science des données ?",
+  "questionOtherSpecializations": "Avez-vous d'autres spécialisations/mineures ?",
+  "questionPriorExperience": "Avez-vous une expérience préalable dans ces domaines ?",
+  "questionOtherFields": "Dans quels autres domaines avez-vous travaillé auparavant ?",
+  "questionSoftSkills": "Quelles compétences personnelles maîtrisez-vous ?",
+  "questionHardSkills": "Quelles compétences techniques maîtrisez-vous ?",
+  "questionLanguagesComfortable": "Dans quelles langues êtes-vous à l'aise pour faire le stage ?",
+  "questionCountriesSearch": "Dans quels pays recherchez-vous un stage ?",
+  "questionAvailability": "Quelle est votre disponibilité ?",
+  "questionInternshipLength": "Quelle durée devrait avoir le stage ?",
+  "questionRequireVisa": "Avez-vous besoin d'un VISA pour travailler ?",
+  "questionConsiderTraineeships": "Considéreriez-vous aussi des formations ?",
+  
+  "optionHighschool": "Lycée",
+  "optionBachelor": "Licence",
+  "optionMaster": "Master", 
+  "optionPhd": "Doctorat",
+  "optionYes": "Oui",
+  "optionNo": "Non",
+  "optionMaybe": "Peut-être",
+  "optionFirstYear": "1ère année",
+  "optionSecondYear": "2ème année", 
+  "optionThirdYear": "3ème année",
+  "optionFourthYear": "4ème année",
+  "optionResearch": "Recherche",
+  "optionApplied": "Appliquée",
+  "optionEngineering": "Ingénierie",
+  "optionItDataScience": "IT et Science des données",
+  "optionMarketingCommunication": "Marketing et Communication",
+  "optionFinanceEconomics": "Finance et Économie",
+  "optionPoliticalScience": "Sciences politiques et Administration publique",
+  "optionSalesBusiness": "Ventes et Administration des affaires",
+  "optionArtsCulture": "Arts et Culture",
+  "optionBiologyChemistry": "Biologie, Chimie et Sciences de la vie",
+  "optionNone": "Aucun",
+  "optionMechanical": "Mécanique",
+  "optionElectrical": "Électrique",
+  "optionAerospace": "Aérospatiale",
+  "optionCivil": "Civile",
+  "optionChemical": "Chimique",
+  "optionSoftwareDevelopment": "Développement logiciel et débogage",
+  "optionFullStackDevelopment": "Développement full-stack",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps et CI/CD",
+  "optionItSupport": "Support IT et Administration système",
+  "optionProductManagement": "Gestion de produit",
+  "optionMachineLearning": "Machine Learning et IA",
+  "optionDataAnalysis": "Analyse de données",
+  "optionYesInternship": "Oui, stage",
+  "optionYesPartTime": "Oui, emploi à temps partiel",
+  "optionYesPersonalProjects": "Oui, projets personnels",
+  "optionAnytime": "N'importe quand",
+  "optionSummer": "Été",
+  "optionAutumn": "Automne",
+  "optionWinter": "Hiver",
+  "optionSpring": "Printemps",
+  "optionOneToThreeMonths": "1-3 mois",
+  "optionThreeToSixMonths": "3-6 mois",
+  "optionSixToTwelveMonths": "6-12 mois",
+  "optionMoreThanTwelveMonths": "Plus de 12 mois",
+  "optionYesEuUk": "Oui, pour UE/EEE et Royaume-Uni",
+  "optionYesEu": "Oui, pour UE/EEE",
+  "optionYesUk": "Oui, pour Royaume-Uni",
+  
+  "languageAlbanian": "Albanais",
+  "languageBosnian": "Bosniaque",
+  "languageBulgarian": "Bulgare",
+  "languageCatalan": "Catalan",
+  "languageCroatian": "Croate",
+  "languageCzech": "Tchèque",
+  "languageDanish": "Danois",
+  "languageDutch": "Néerlandais",
+  "languageEnglish": "Anglais",
+  "languageEstonian": "Estonien",
+  "languageFinnish": "Finnois",
+  "languageFrench": "Français",
+  "languageGerman": "Allemand",
+  "languageGreek": "Grec",
+  "languageHungarian": "Hongrois",
+  "languageIcelandic": "Islandais",
+  "languageIrish": "Irlandais",
+  "languageItalian": "Italien",
+  "languageLatvian": "Letton",
+  "languageLithuanian": "Lituanien",
+  "languageLuxembourgish": "Luxembourgeois",
+  "languageMacedonian": "Macédonien",
+  "languageMaltese": "Maltais",
+  "languageMontenegrin": "Monténégrin",
+  "languageNorwegian": "Norvégien",
+  "languagePolish": "Polonais",
+  "languagePortuguese": "Portugais",
+  "languageRomanian": "Roumain",
+  "languageRussian": "Russe",
+  "languageSerbian": "Serbe",
+  "languageSlovak": "Slovaque",
+  "languageSlovenian": "Slovène",
+  "languageSpanish": "Espagnol",
+  "languageSwedish": "Suédois",
+  "languageTurkish": "Turc",
+  "languageUkrainian": "Ukrainien",
+  
+  "countryAny": "N'importe lequel",
+  "countryAlbania": "Albanie",
+  "countryAndorra": "Andorre",
+  "countryAustria": "Autriche",
+  "countryBosniaHerzegovina": "Bosnie-Herzégovine",
+  "countryBulgaria": "Bulgarie",
+  "countryCroatia": "Croatie",
+  "countryCyprus": "Chypre",
+  "countryCzechRepublic": "République tchèque",
+  "countryDenmark": "Danemark",
+  "countryEstonia": "Estonie",
+  "countryFinland": "Finlande",
+  "countryGreece": "Grèce",
+  "countryHungary": "Hongrie",
+  "countryIceland": "Islande",
+  "countryIreland": "Irlande",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Lettonie",
+  "countryLithuania": "Lituanie",
+  "countryLuxembourg": "Luxembourg",
+  "countryMalta": "Malte",
+  "countryMonaco": "Monaco",
+  "countryMontenegro": "Monténégro",
+  "countryNorthMacedonia": "Macédoine du Nord",
+  "countryNorway": "Norvège",
+  "countryPoland": "Pologne",
+  "countryPortugal": "Portugal",
+  "countrySanMarino": "Saint-Marin",
+  "countrySerbia": "Serbie",
+  "countrySlovakia": "Slovaquie",
+  "countrySlovenia": "Slovénie",
+  "countrySweden": "Suède",
+  "countryUkraine": "Ukraine",
+  "countryVaticanCity": "Cité du Vatican",
+  
+  "hintSelectOne": "Sélectionnez une option",
+  "hintSelectMultiple": "Sélectionnez toutes les options applicables",
+  "hintSearchAndSelect": "Rechercher et sélectionner",
+  "hintTypeAnswer": "Tapez votre réponse ici",
+  "hintOtherSpecify": "Autre, spécifiez"
 }
