--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,30 +1,192 @@
 {
   "@@locale": "it",
-  "languagesSelectLanguage": "Seleziona lingua",
+  
+  "languagesSelectLanguage": "Seleziona Lingua",
   "languagesChoosePreferredLanguage": "Scegli la tua lingua preferita",
   "languagesLanguageChangedTo": "Lingua cambiata in {language}",
+  "@languagesLanguageChangedTo": {
+    "placeholders": {
+      "language": {
+        "type": "String"
+      }
+    }
+  },
   "languagesSelected": "Selezionata",
   "languagesRomanian": "Rumeno",
-  "languagesFrench": "Francese",
+  "languagesFrench": "Francese", 
   "languagesGerman": "Tedesco",
   "languagesItalian": "Italiano",
   "languagesSpanish": "Spagnolo",
   "languagesDutch": "Olandese",
   "languagesEnglish": "Inglese",
-  "countryRomania": "Romania",
-  "countryMoldova": "Moldavia",
-  "countryFrance": "Francia", 
-  "countryBelgium": "Belgio",
-  "countryGermany": "Germania",
-  "countrySwitzerland": "Svizzera",
-  "countryItaly": "Italia",
-  "countrySpain": "Spagna",
-  "countryNetherlands": "Paesi Bassi",
-  "countryUnitedKingdom": "Regno Unito",
+
+  "questionsNext": "Prossima",
+  "questionsPrevious": "Precedente",
+  "questionsFinish": "Termina",
+  
   "entryScreenWelcome": "Benvenuto",
   "entryScreenYourName": "Il tuo nome",
   "entryScreenEnterFullName": "Inserisci il tuo nome completo",
   "entryScreenIAgreeToThe": "Accetto la ",
-  "entryScreenGdprPrivacyPolicy": "Informativa sulla Privacy GDPR",
-  "entryScreenContinue": "Continua"
+  "entryScreenGdprPrivacyPolicy": "Politica sulla privacy GDPR",
+  "entryScreenContinue": "Continua",
+  
+  "questionStudyLevel": "Qual è il tuo livello di studi attuale?",
+  "questionStillStudent": "Sei ancora uno studente?",
+  "questionWhatYear": "In che anno sei?",
+  "questionWhenFinish": "Quando finirai i tuoi studi?",
+  "questionUniversityType": "Che tipo di università frequenti/hai frequentato?",
+  "questionStudyField": "Qual è il tuo campo di studio?",
+  "questionEngineeringType": "Che tipo di ingegneria?",
+  "questionItArea": "Quale area IT e Scienza dei dati?",
+  "questionOtherSpecializations": "Hai altre specializzazioni/minori?",
+  "questionPriorExperience": "Hai esperienza precedente in questi campi?",
+  "questionOtherFields": "In quali altri campi hai lavorato prima?",
+  "questionSoftSkills": "Quali soft skills padroneggi?",
+  "questionHardSkills": "Quali hard skills padroneggi?",
+  "questionLanguagesComfortable": "In quali lingue ti senti a tuo agio per fare lo stage?",
+  "questionCountriesSearch": "In quali paesi stai cercando uno stage?",
+  "questionAvailability": "Qual è la tua disponibilità?",
+  "questionInternshipLength": "Quanto dovrebbe durare lo stage?",
+  "questionRequireVisa": "Hai bisogno di un VISTO per lavorare?",
+  "questionConsiderTraineeships": "Considereresti anche dei tirocini?",
+  
+  "optionHighschool": "Liceo",
+  "optionBachelor": "Laurea",
+  "optionMaster": "Master", 
+  "optionPhd": "Dottorato",
+  "optionYes": "Sì",
+  "optionNo": "No",
+  "optionMaybe": "Forse",
+  "optionFirstYear": "1° anno",
+  "optionSecondYear": "2° anno", 
+  "optionThirdYear": "3° anno",
+  "optionFourthYear": "4° anno",
+  "optionResearch": "Ricerca",
+  "optionApplied": "Applicata",
+  "optionEngineering": "Ingegneria",
+  "optionItDataScience": "IT e Scienza dei dati",
+  "optionMarketingCommunication": "Marketing e Comunicazione",
+  "optionFinanceEconomics": "Finanza ed Economia",
+  "optionPoliticalScience": "Scienze politiche e Pubblica amministrazione",
+  "optionSalesBusiness": "Vendite e Amministrazione aziendale",
+  "optionArtsCulture": "Arte e Cultura",
+  "optionBiologyChemistry": "Biologia, Chimica e Scienze della vita",
+  "optionNone": "Nessuno",
+  "optionMechanical": "Meccanica",
+  "optionElectrical": "Elettrica",
+  "optionAerospace": "Aerospaziale",
+  "optionCivil": "Civile",
+  "optionChemical": "Chimica",
+  "optionSoftwareDevelopment": "Sviluppo software e Debugging",
+  "optionFullStackDevelopment": "Sviluppo full-stack",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps e CI/CD",
+  "optionItSupport": "Supporto IT e Amministrazione di sistema",
+  "optionProductManagement": "Gestione prodotto",
+  "optionMachineLearning": "Machine Learning e IA",
+  "optionDataAnalysis": "Analisi dati",
+  "optionYesInternship": "Sì, stage",
+  "optionYesPartTime": "Sì, lavoro part-time",
+  "optionYesPersonalProjects": "Sì, progetti personali",
+  "optionAnytime": "Quando vuoi",
+  "optionSummer": "Estate",
+  "optionAutumn": "Autunno",
+  "optionWinter": "Inverno",
+  "optionSpring": "Primavera",
+  "optionOneToThreeMonths": "1-3 mesi",
+  "optionThreeToSixMonths": "3-6 mesi",
+  "optionSixToTwelveMonths": "6-12 mesi",
+  "optionMoreThanTwelveMonths": "Più di 12 mesi",
+  "optionYesEuUk": "Sì, per UE/SEE e Regno Unito",
+  "optionYesEu": "Sì, per UE/SEE",
+  "optionYesUk": "Sì, per Regno Unito",
+  
+  "hintSelectOne": "Seleziona un'opzione",
+  "hintSelectMultiple": "Seleziona tutte le opzioni applicabili",
+  "hintSearchAndSelect": "Cerca e seleziona",
+  "hintTypeAnswer": "Scrivi la tua risposta qui",
+  "hintOtherSpecify": "Altro, specifica",
+  
+  "countryAny": "Qualsiasi",
+  "countryAlbania": "Albania",
+  "countryAndorra": "Andorra",
+  "countryAustria": "Austria",
+  "countryBelgium": "Belgio",
+  "countryBosniaHerzegovina": "Bosnia ed Erzegovina",
+  "countryBulgaria": "Bulgaria",
+  "countryCroatia": "Croazia",
+  "countryCyprus": "Cipro",
+  "countryCzechRepublic": "Repubblica Ceca",
+  "countryDenmark": "Danimarca",
+  "countryEstonia": "Estonia",
+  "countryFinland": "Finlandia",
+  "countryFrance": "Francia",
+  "countryGermany": "Germania",
+  "countryGreece": "Grecia",
+  "countryHungary": "Ungheria",
+  "countryIceland": "Islanda",
+  "countryIreland": "Irlanda",
+  "countryItaly": "Italia",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Lettonia",
+  "countryLithuania": "Lituania",
+  "countryLuxembourg": "Lussemburgo",
+  "countryMalta": "Malta",
+  "countryMoldova": "Moldavia",
+  "countryMonaco": "Monaco",
+  "countryMontenegro": "Montenegro",
+  "countryNetherlands": "Paesi Bassi",
+  "countryNorthMacedonia": "Macedonia del Nord",
+  "countryNorway": "Norvegia",
+  "countryPoland": "Polonia",
+  "countryPortugal": "Portogallo",
+  "countryRomania": "Romania",
+  "countrySanMarino": "San Marino",
+  "countrySerbia": "Serbia",
+  "countrySlovakia": "Slovacchia",
+  "countrySlovenia": "Slovenia",
+  "countrySpain": "Spagna",
+  "countrySweden": "Svezia",
+  "countrySwitzerland": "Svizzera",
+  "countryUkraine": "Ucraina",
+  "countryUnitedKingdom": "Regno Unito",
+  "countryVaticanCity": "Città del Vaticano",
+  
+  "languageAlbanian": "Albanese",
+  "languageBosnian": "Bosniaco",
+  "languageBulgarian": "Bulgaro",
+  "languageCatalan": "Catalano",
+  "languageCroatian": "Croato",
+  "languageCzech": "Ceco",
+  "languageDanish": "Danese",
+  "languageDutch": "Olandese",
+  "languageEnglish": "Inglese",
+  "languageEstonian": "Estone",
+  "languageFinnish": "Finlandese",
+  "languageFrench": "Francese",
+  "languageGerman": "Tedesco",
+  "languageGreek": "Greco",
+  "languageHungarian": "Ungherese",
+  "languageIcelandic": "Islandese",
+  "languageIrish": "Irlandese",
+  "languageItalian": "Italiano",
+  "languageLatvian": "Lettone",
+  "languageLithuanian": "Lituano",
+  "languageLuxembourgish": "Lussemburghese",
+  "languageMacedonian": "Macedone",
+  "languageMaltese": "Maltese",
+  "languageMontenegrin": "Montenegrino",
+  "languageNorwegian": "Norvegese",
+  "languagePolish": "Polacco",
+  "languagePortuguese": "Portoghese",
+  "languageRomanian": "Rumeno",
+  "languageRussian": "Russo",
+  "languageSerbian": "Serbo",
+  "languageSlovak": "Slovacco",
+  "languageSlovenian": "Sloveno",
+  "languageSpanish": "Spagnolo",
+  "languageSwedish": "Svedese",
+  "languageTurkish": "Turco",
+  "languageUkrainian": "Ucraino"
 }
