--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -1,30 +1,192 @@
 {
   "@@locale": "nl",
-  "languagesSelectLanguage": "Taal selecteren",
-  "languagesChoosePreferredLanguage": "Kies je voorkeurstaal",
+  
+  "languagesSelectLanguage": "Taal Selecteren",
+  "languagesChoosePreferredLanguage": "Kies je gewenste taal",
   "languagesLanguageChangedTo": "Taal gewijzigd naar {language}",
+  "@languagesLanguageChangedTo": {
+    "placeholders": {
+      "language": {
+        "type": "String"
+      }
+    }
+  },
   "languagesSelected": "Geselecteerd",
   "languagesRomanian": "Roemeens",
-  "languagesFrench": "Frans",
+  "languagesFrench": "Frans", 
   "languagesGerman": "Duits",
   "languagesItalian": "Italiaans",
   "languagesSpanish": "Spaans",
   "languagesDutch": "Nederlands",
   "languagesEnglish": "Engels",
-  "countryRomania": "Roemenië",
-  "countryMoldova": "Moldavië",
-  "countryFrance": "Frankrijk", 
-  "countryBelgium": "België",
-  "countryGermany": "Duitsland",
-  "countrySwitzerland": "Zwitserland",
-  "countryItaly": "Italië",
-  "countrySpain": "Spanje",
-  "countryNetherlands": "Nederland",
-  "countryUnitedKingdom": "Verenigd Koninkrijk",
+
+  "questionsNext": "Volgende",
+  "questionsPrevious": "Vorige",
+  "questionsFinish": "Voltooien",
+  
   "entryScreenWelcome": "Welkom",
   "entryScreenYourName": "Je naam",
   "entryScreenEnterFullName": "Voer je volledige naam in",
   "entryScreenIAgreeToThe": "Ik ga akkoord met het ",
-  "entryScreenGdprPrivacyPolicy": "GDPR Privacybeleid",
-  "entryScreenContinue": "Doorgaan"
+  "entryScreenGdprPrivacyPolicy": "AVG-privacybeleid",
+  "entryScreenContinue": "Doorgaan",
+  
+  "questionStudyLevel": "Wat is je huidige studieniveau?",
+  "questionStillStudent": "Ben je nog student?",
+  "questionWhatYear": "In welk jaar zit je?",
+  "questionWhenFinish": "Wanneer ben je klaar met je studie?",
+  "questionUniversityType": "Welk type universiteit volg/volgde je?",
+  "questionStudyField": "Wat is je studiegebied?",
+  "questionEngineeringType": "Welk type engineering?",
+  "questionItArea": "Welk gebied IT en Data Science?",
+  "questionOtherSpecializations": "Heb je andere specialisaties/bijvakken?",
+  "questionPriorExperience": "Heb je eerdere ervaring in deze gebieden?",
+  "questionOtherFields": "In welke andere gebieden heb je eerder gewerkt?",
+  "questionSoftSkills": "Welke soft skills beheers je?",
+  "questionHardSkills": "Welke hard skills beheers je?",
+  "questionLanguagesComfortable": "In welke talen voel je je comfortabel om de stage te doen?",
+  "questionCountriesSearch": "In welke landen zoek je een stage?",
+  "questionAvailability": "Wat is je beschikbaarheid?",
+  "questionInternshipLength": "Hoe lang moet de stage duren?",
+  "questionRequireVisa": "Heb je een VISUM nodig om te werken?",
+  "questionConsiderTraineeships": "Zou je ook traineeships overwegen?",
+  
+  "optionHighschool": "Middelbare school",
+  "optionBachelor": "Bachelor",
+  "optionMaster": "Master", 
+  "optionPhd": "PhD",
+  "optionYes": "Ja",
+  "optionNo": "Nee",
+  "optionMaybe": "Misschien",
+  "optionFirstYear": "1e jaar",
+  "optionSecondYear": "2e jaar", 
+  "optionThirdYear": "3e jaar",
+  "optionFourthYear": "4e jaar",
+  "optionResearch": "Onderzoek",
+  "optionApplied": "Toegepast",
+  "optionEngineering": "Engineering",
+  "optionItDataScience": "IT en Data Science",
+  "optionMarketingCommunication": "Marketing en Communicatie",
+  "optionFinanceEconomics": "Financiën en Economie",
+  "optionPoliticalScience": "Politieke wetenschappen en Openbaar bestuur",
+  "optionSalesBusiness": "Verkoop en Bedrijfskunde",
+  "optionArtsCulture": "Kunst en Cultuur",
+  "optionBiologyChemistry": "Biologie, Scheikunde en Levenswetenschappen",
+  "optionNone": "Geen",
+  "optionMechanical": "Werktuigbouw",
+  "optionElectrical": "Elektrotechniek",
+  "optionAerospace": "Lucht- en ruimtevaart",
+  "optionCivil": "Civiele techniek",
+  "optionChemical": "Chemische techniek",
+  "optionSoftwareDevelopment": "Softwareontwikkeling en Debugging",
+  "optionFullStackDevelopment": "Full-stack ontwikkeling",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps en CI/CD",
+  "optionItSupport": "IT-ondersteuning en Systeembeheer",
+  "optionProductManagement": "Productbeheer",
+  "optionMachineLearning": "Machine Learning en AI",
+  "optionDataAnalysis": "Data-analyse",
+  "optionYesInternship": "Ja, stage",
+  "optionYesPartTime": "Ja, deeltijdbaan",
+  "optionYesPersonalProjects": "Ja, persoonlijke projecten",
+  "optionAnytime": "Altijd",
+  "optionSummer": "Zomer",
+  "optionAutumn": "Herfst",
+  "optionWinter": "Winter",
+  "optionSpring": "Lente",
+  "optionOneToThreeMonths": "1-3 maanden",
+  "optionThreeToSixMonths": "3-6 maanden",
+  "optionSixToTwelveMonths": "6-12 maanden",
+  "optionMoreThanTwelveMonths": "Meer dan 12 maanden",
+  "optionYesEuUk": "Ja, voor EU/EER en VK",
+  "optionYesEu": "Ja, voor EU/EER",
+  "optionYesUk": "Ja, voor VK",
+  
+  "hintSelectOne": "Selecteer één optie",
+  "hintSelectMultiple": "Selecteer alle toepasselijke opties",
+  "hintSearchAndSelect": "Zoeken en selecteren",
+  "hintTypeAnswer": "Typ hier je antwoord",
+  "hintOtherSpecify": "Anders, specificeer",
+  
+  "countryAny": "Elke",
+  "countryAlbania": "Albanië",
+  "countryAndorra": "Andorra",
+  "countryAustria": "Oostenrijk",
+  "countryBelgium": "België",
+  "countryBosniaHerzegovina": "Bosnië en Herzegovina",
+  "countryBulgaria": "Bulgarije",
+  "countryCroatia": "Kroatië",
+  "countryCyprus": "Cyprus",
+  "countryCzechRepublic": "Tsjechische Republiek",
+  "countryDenmark": "Denemarken",
+  "countryEstonia": "Estland",
+  "countryFinland": "Finland",
+  "countryFrance": "Frankrijk",
+  "countryGermany": "Duitsland",
+  "countryGreece": "Griekenland",
+  "countryHungary": "Hongarije",
+  "countryIceland": "IJsland",
+  "countryIreland": "Ierland",
+  "countryItaly": "Italië",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Letland",
+  "countryLithuania": "Litouwen",
+  "countryLuxembourg": "Luxemburg",
+  "countryMalta": "Malta",
+  "countryMoldova": "Moldavië",
+  "countryMonaco": "Monaco",
+  "countryMontenegro": "Montenegro",
+  "countryNetherlands": "Nederland",
+  "countryNorthMacedonia": "Noord-Macedonië",
+  "countryNorway": "Noorwegen",
+  "countryPoland": "Polen",
+  "countryPortugal": "Portugal",
+  "countryRomania": "Roemenië",
+  "countrySanMarino": "San Marino",
+  "countrySerbia": "Servië",
+  "countrySlovakia": "Slowakije",
+  "countrySlovenia": "Slovenië",
+  "countrySpain": "Spanje",
+  "countrySweden": "Zweden",
+  "countrySwitzerland": "Zwitserland",
+  "countryUkraine": "Oekraïne",
+  "countryUnitedKingdom": "Verenigd Koninkrijk",
+  "countryVaticanCity": "Vaticaanstad",
+  
+  "languageAlbanian": "Albanees",
+  "languageBosnian": "Bosnisch",
+  "languageBulgarian": "Bulgaars",
+  "languageCatalan": "Catalaans",
+  "languageCroatian": "Kroatisch",
+  "languageCzech": "Tsjechisch",
+  "languageDanish": "Deens",
+  "languageDutch": "Nederlands",
+  "languageEnglish": "Engels",
+  "languageEstonian": "Ests",
+  "languageFinnish": "Fins",
+  "languageFrench": "Frans",
+  "languageGerman": "Duits",
+  "languageGreek": "Grieks",
+  "languageHungarian": "Hongaars",
+  "languageIcelandic": "IJslands",
+  "languageIrish": "Iers",
+  "languageItalian": "Italiaans",
+  "languageLatvian": "Lets",
+  "languageLithuanian": "Litouws",
+  "languageLuxembourgish": "Luxemburgs",
+  "languageMacedonian": "Macedonisch",
+  "languageMaltese": "Maltees",
+  "languageMontenegrin": "Montenegrijns",
+  "languageNorwegian": "Noors",
+  "languagePolish": "Pools",
+  "languagePortuguese": "Portugees",
+  "languageRomanian": "Roemeens",
+  "languageRussian": "Russisch",
+  "languageSerbian": "Servisch",
+  "languageSlovak": "Slowaaks",
+  "languageSlovenian": "Sloveens",
+  "languageSpanish": "Spaans",
+  "languageSwedish": "Zweeds",
+  "languageTurkish": "Turks",
+  "languageUkrainian": "Oekraïens"
 }
