--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -1,19 +1,28 @@
 {
   "@@locale": "ro",
+  
   "languagesSelectLanguage": "Selectează Limba",
-  "languagesChoosePreferredLanguage": "Alege limba preferată", 
+  "languagesChoosePreferredLanguage": "Alege limba preferată",
   "languagesLanguageChangedTo": "Limba schimbată în {language}",
+  "@languagesLanguageChangedTo": {
+    "placeholders": {
+      "language": {
+        "type": "String"
+      }
+    }
+  },
   "languagesSelected": "Selectată",
   "languagesRomanian": "Română",
-  "languagesFrench": "Franceză",
-  "languagesGerman": "Germană", 
+  "languagesFrench": "Franceză", 
+  "languagesGerman": "Germană",
   "languagesItalian": "Italiană",
   "languagesSpanish": "Spaniolă",
   "languagesDutch": "Olandeză",
   "languagesEnglish": "Engleză",
+  
   "countryRomania": "România",
   "countryMoldova": "Moldova",
-  "countryFrance": "Franța", 
+  "countryFrance": "Franța",
   "countryBelgium": "Belgia",
   "countryGermany": "Germania",
   "countrySwitzerland": "Elveția",
@@ -21,10 +30,164 @@
   "countrySpain": "Spania",
   "countryNetherlands": "Olanda",
   "countryUnitedKingdom": "Marea Britanie",
+  
   "entryScreenWelcome": "Bun venit",
   "entryScreenYourName": "Numele tău",
   "entryScreenEnterFullName": "Introdu numele complet",
   "entryScreenIAgreeToThe": "Sunt de acord cu ",
   "entryScreenGdprPrivacyPolicy": "Politica de Confidențialitate GDPR",
-  "entryScreenContinue": "Continuă"
+  "entryScreenContinue": "Continuă",
+
+  "questionsNext": "Următoarea",
+  "questionsPrevious": "Precedenta",
+  "questionsFinish": "Finalizează",
+  
+  "questionStudyLevel": "Care este nivelul tău actual de studiu?",
+  "questionStillStudent": "Ești încă student?",
+  "questionWhatYear": "În ce an ești?",
+  "questionWhenFinish": "Când vei termina studiile?",
+  "questionUniversityType": "Ce tip de universitate frecventezi/ai frecventat?",
+  "questionStudyField": "Care este domeniul de studiu?",
+  "questionEngineeringType": "Ce tip de inginerie?",
+  "questionItArea": "Ce zonă IT și Știința Datelor?",
+  "questionOtherSpecializations": "Ai alte specializări/minor?",
+  "questionPriorExperience": "Ai experiență anterioară în aceste domenii?",
+  "questionOtherFields": "În ce alte domenii ai lucrat înainte?",
+  "questionSoftSkills": "Ce soft skills stăpânești?",
+  "questionHardSkills": "Ce hard skills stăpânești?",
+  "questionLanguagesComfortable": "În ce limbi te simți confortabil să faci internship-ul?",
+  "questionCountriesSearch": "În ce țări cauți un internship?",
+  "questionAvailability": "Care este disponibilitatea ta?",
+  "questionInternshipLength": "Cât de lung să fie internship-ul?",
+  "questionRequireVisa": "Ai nevoie de VIZĂ pentru a lucra?",
+  "questionConsiderTraineeships": "Ai lua în considerare și traineeship-uri?",
+  
+  "optionHighschool": "Liceu",
+  "optionBachelor": "Licență",
+  "optionMaster": "Master", 
+  "optionPhd": "Doctorat",
+  "optionYes": "Da",
+  "optionNo": "Nu",
+  "optionMaybe": "Poate",
+  "optionFirstYear": "Anul 1",
+  "optionSecondYear": "Anul 2", 
+  "optionThirdYear": "Anul 3",
+  "optionFourthYear": "Anul 4",
+  "optionResearch": "Cercetare",
+  "optionApplied": "Aplicată",
+  "optionEngineering": "Inginerie",
+  "optionItDataScience": "IT și Știința Datelor",
+  "optionMarketingCommunication": "Marketing și Comunicare",
+  "optionFinanceEconomics": "Finanțe și Economie",
+  "optionPoliticalScience": "Științe Politice și Administrație Publică",
+  "optionSalesBusiness": "Vânzări și Administrarea Afacerilor",
+  "optionArtsCulture": "Arte și Cultură",
+  "optionBiologyChemistry": "Biologie, Chimie și Științele Vieții",
+  "optionNone": "Niciunul",
+  "optionMechanical": "Mecanică",
+  "optionElectrical": "Electrică",
+  "optionAerospace": "Aerospațială",
+  "optionCivil": "Civilă",
+  "optionChemical": "Chimică",
+  "optionSoftwareDevelopment": "Dezvoltare Software și Debugging",
+  "optionFullStackDevelopment": "Dezvoltare Full-stack",
+  "optionCloudComputing": "Cloud Computing (AWS, Azure, GCP)",
+  "optionDevOps": "DevOps și CI/CD",
+  "optionItSupport": "Suport IT și Administrarea Sistemelor",
+  "optionProductManagement": "Management de Produs",
+  "optionMachineLearning": "Machine Learning și AI",
+  "optionDataAnalysis": "Analiza Datelor",
+  "optionYesInternship": "Da, internship",
+  "optionYesPartTime": "Da, job part-time",
+  "optionYesPersonalProjects": "Da, proiecte personale",
+  "optionAnytime": "Oricând",
+  "optionSummer": "Vară",
+  "optionAutumn": "Toamnă",
+  "optionWinter": "Iarnă",
+  "optionSpring": "Primăvară",
+  "optionOneToThreeMonths": "1-3 luni",
+  "optionThreeToSixMonths": "3-6 luni",
+  "optionSixToTwelveMonths": "6-12 luni",
+  "optionMoreThanTwelveMonths": "Mai mult de 12 luni",
+  "optionYesEuUk": "Da, pentru UE/SEE și Marea Britanie",
+  "optionYesEu": "Da, pentru UE/SEE",
+  "optionYesUk": "Da, pentru Marea Britanie",
+  
+  "languageAlbanian": "Albaneză",
+  "languageBosnian": "Bosniacă",
+  "languageBulgarian": "Bulgară",
+  "languageCatalan": "Catalană",
+  "languageCroatian": "Croată",
+  "languageCzech": "Cehă",
+  "languageDanish": "Daneză",
+  "languageDutch": "Olandeză",
+  "languageEnglish": "Engleză",
+  "languageEstonian": "Estoniană",
+  "languageFinnish": "Finlandeză",
+  "languageFrench": "Franceză",
+  "languageGerman": "Germană",
+  "languageGreek": "Greacă",
+  "languageHungarian": "Maghiară",
+  "languageIcelandic": "Islandeză",
+  "languageIrish": "Irlandeză",
+  "languageItalian": "Italiană",
+  "languageLatvian": "Letonă",
+  "languageLithuanian": "Lituaniană",
+  "languageLuxembourgish": "Luxemburgheză",
+  "languageMacedonian": "Macedoneană",
+  "languageMaltese": "Malteză",
+  "languageMontenegrin": "Muntenegrină",
+  "languageNorwegian": "Norvegiană",
+  "languagePolish": "Poloneză",
+  "languagePortuguese": "Portugheză",
+  "languageRomanian": "Română",
+  "languageRussian": "Rusă",
+  "languageSerbian": "Sârbă",
+  "languageSlovak": "Slovacă",
+  "languageSlovenian": "Slovenă",
+  "languageSpanish": "Spaniolă",
+  "languageSwedish": "Suedeză",
+  "languageTurkish": "Turcă",
+  "languageUkrainian": "Ucraineană",
+  
+  "countryAny": "Oricare",
+  "countryAlbania": "Albania",
+  "countryAndorra": "Andorra",
+  "countryAustria": "Austria",
+  "countryBosniaHerzegovina": "Bosnia și Herțegovina",
+  "countryBulgaria": "Bulgaria",
+  "countryCroatia": "Croația",
+  "countryCyprus": "Cipru",
+  "countryCzechRepublic": "Republica Cehă",
+  "countryDenmark": "Danemarca",
+  "countryEstonia": "Estonia",
+  "countryFinland": "Finlanda",
+  "countryGreece": "Grecia",
+  "countryHungary": "Ungaria",
+  "countryIceland": "Islanda",
+  "countryIreland": "Irlanda",
+  "countryKosovo": "Kosovo",
+  "countryLatvia": "Letonia",
+  "countryLithuania": "Lituania",
+  "countryLuxembourg": "Luxemburg",
+  "countryMalta": "Malta",
+  "countryMonaco": "Monaco",
+  "countryMontenegro": "Muntenegru",
+  "countryNorthMacedonia": "Macedonia de Nord",
+  "countryNorway": "Norvegia",
+  "countryPoland": "Polonia",
+  "countryPortugal": "Portugalia",
+  "countrySanMarino": "San Marino",
+  "countrySerbia": "Serbia",
+  "countrySlovakia": "Slovacia",
+  "countrySlovenia": "Slovenia",
+  "countrySweden": "Suedia",
+  "countryUkraine": "Ucraina",
+  "countryVaticanCity": "Orașul Vatican",
+  
+  "hintSelectOne": "Selectează o opțiune",
+  "hintSelectMultiple": "Selectează toate care se aplică",
+  "hintSearchAndSelect": "Caută și selectează",
+  "hintTypeAnswer": "Scrie răspunsul aici",
+  "hintOtherSpecify": "Altul, specifică"
 }
